--- a/misc/index.html
+++ b/misc/index.html
@@ -6,13 +6,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-    <link href="css/stylesheet.css" rel="stylesheet" >
+    <link href="../css/stylesheet.css" rel="stylesheet" >
   </head>
 
   <body>
    <header><a href="https://www.bcit.ca/" target="_blank"
       ><img
-        src="images/150px-BCIT_logo.svg.png"
+        src="../images/150px-BCIT_logo.svg.png"
         alt="BCIT Logo"
         width="150"
         height="150"
@@ -32,7 +32,7 @@
     <main><article>
       <h2>A little about me...</h2>
       <img
-        src="images/ngf1cprz2g851.webp"
+        src="../images/ngf1cprz2g851.webp"
         alt="Brown British Shorthair Kitten"
         width="436"
         height="340"
