--- a/misc/courses.html
+++ b/misc/courses.html
@@ -5,7 +5,7 @@
         <title>
             My Courses
         </title>
-        <link href="css/stylesheet.css" rel="stylesheet" >
+        <link href="../css/stylesheet.css" rel="stylesheet" >
         
 
     </head>
