--- a/misc/school.html
+++ b/misc/school.html
@@ -5,14 +5,14 @@
         <title>
             My School
         </title>
-        <link href="css/stylesheet.css" rel="stylesheet" >
+        <link href="../css/stylesheet.css" rel="stylesheet" >
         
 
     </head>
     <body>
         <header><a href="https://www.bcit.ca/" target="_blank"
             ><img
-              src="images/150px-BCIT_logo.svg.png"
+              src="../images/150px-BCIT_logo.svg.png"
               alt="BCIT Logo"
               width="150"
               height="150"
