creating a flex box and changed background colours

--- a/index.html
+++ b/index.html
@@ -10,16 +10,10 @@
   </head>
 
   <body>
-   <header><a href="https://www.bcit.ca/" target="_blank"
-      ><img
-        src="images/150px-BCIT_logo.svg.png"
-        alt="BCIT Logo"
-        width="150"
-        height="150"
-    ></a>
-    <h1 class="h1headingindex">Welcome to My First Website!</h1>
+   <header>
     <nav>
-      <ul>
+      <h1 class="h1headingindex">Welcome to My First Website!</h1>
+      <ul class="navlist">
         <li>
           <a href="misc/school.html">My School</a>
         </li>
@@ -29,7 +23,8 @@
       </ul>
      </nav>
    </header>
-    <main><article>
+    <main>
+      <article>
       <h2>A little about me...</h2>
       <img
         src="images/ngf1cprz2g851.webp"
@@ -61,5 +56,6 @@
       <li>ACIT-1630</li>
     </ul>
    </main>
+   <footer>Copyright Data</footer>
   </body>
 </html>
