trying to make the image go right

--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
    </header>
     <main>
       <article>
-      <h2>A little about me...</h2>
-      <img
-        src="images/ngf1cprz2g851.webp"
-        alt="Brown British Shorthair Kitten"
-        width="436"
-        height="340"
-      >
-      <p>My name is Raphael Eustaquio and I am <em>21</em> years old.</p>
-      <p>
-        I was born in the Philippines but moved to Canada when I was 7 years old
-      </p>
-      <p>
-        I am really enjoying the CIT program and my two
-        <strong>favourite</strong>
-        courses so far are ACIT-1620 and ACIT-1515
-      </p>
-    </article>
+        <h2>A little about me...</h2>
+        <img class="pfp"
+          src="images/ngf1cprz2g851.webp"
+          alt="Brown British Shorthair Kitten"
+          width="436"
+          height="340"
+        >
+          <p>My name is Raphael Eustaquio and I am <em>21</em> years old.</p>
+          <p>
+            I was born in the Philippines but moved to Canada when I was 7 years old
+          </p>
+          <p>
+            I am really enjoying the CIT program and my two
+            <strong>favourite</strong>
+            courses so far are ACIT-1620 and ACIT-1515
+          </p>
+      </article>
     <p>3 Courses I am taking include:</p>
     <ul>
       <li>
