--- a/index.html
+++ b/index.html
@@ -24,37 +24,25 @@
      </nav>
    </header>
     <main>
-      <article>
-        <h2>A little about me...</h2>
+      <aside>
         <img class="pfp"
           src="images/ngf1cprz2g851.webp"
-          alt="Brown British Shorthair Kitten"
-          width="436"
-          height="340"
-        >
-          <p>My name is Raphael Eustaquio and I am <em>21</em> years old.</p>
-          <p>
-            I was born in the Philippines but moved to Canada when I was 7 years old
-          </p>
-          <p>
-            I am really enjoying the CIT program and my two
-            <strong>favourite</strong>
-            courses so far are ACIT-1620 and ACIT-1515
-          </p>
+          alt="Brown British Shorthair Kitten">
+      </aside>
+      <article>
+        <h2>A little about me...</h2>  
+        <p>My name is Raphael Eustaquio and I am <em>21</em> years old.</p>
+        <p>I was born in the Philippines but moved to Canada when I was 7 years old</p>
+        <p>I am really enjoying the CIT program and my two <strong>favourite</strong> courses so far are ACIT-1620 and ACIT-1515</p>
       </article>
-    <p>3 Courses I am taking include:</p>
-    <ul>
-      <li>
-        <a
-          href="https://www.bcit.ca/outlines/20223048467/"
-          target="_blank"
-          title="Fundamental Web Technologies Course Outline"
-          >ACIT-1620</a
-        >
-      </li>
-      <li>ACIT-1515</li>
-      <li>ACIT-1630</li>
-    </ul>
+      <section>
+        <p>Lorem ipsum dolor sit amet, pri ceteros dignissim ex. Ea aeterno
+          tamquam erroribus pro, ignota officiis per te. Ad labore inimicus
+          efficiantur est, nonumy semper delectus pro in. Dico legere deterruisset
+          eum id, quo quodsi feugiat ei.
+          Est in epicuri consequat vituperata. Primis maiorum nostrum an mea, 
+          id vim ludus.</p>
+      </section>
    </main>
    <footer>Copyright Data</footer>
   </body>
