Updated the grid layout to match the lab demands

--- a/misc/school.html
+++ b/misc/school.html
@@ -10,13 +10,25 @@
 
     </head>
     <body>
-        <header><a href="https://www.bcit.ca/" target="_blank"
+        <header>
+            <nav>
+              <h1 class="h1headingindex">Welcome to My First Website!</h1>
+              <ul class="navlist">
+                <li>
+                  <a href="misc/school.html">My School</a>
+                </li>
+                <li>
+                  <a href="misc/courses.html">My courses</a>
+                </li>
+              </ul>
+             </nav>
+           </header>
+        <a href="https://www.bcit.ca/" target="_blank"
             ><img
               src="../images/150px-BCIT_logo.svg.png"
               alt="BCIT Logo"
               width="150"
               height="150"
           ></a>
-        </header>
     </body>
 </html>
