--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
       <aside>
         <img class="pfp"
           src="images/ngf1cprz2g851.webp"
-          alt="Brown British Shorthair Kitten">
+          alt="Brown British Shorthair Kitten"
+          height="180px"
+          width="230px">
       </aside>
+      <h2 class="h2intro">A little about me...</h2> 
       <article>
-        <h2>A little about me...</h2>  
         <p>My name is Raphael Eustaquio and I am <em>21</em> years old.</p>
         <p>I was born in the Philippines but moved to Canada when I was 7 years old</p>
         <p>I am really enjoying the CIT program and my two <strong>favourite</strong> courses so far are ACIT-1620 and ACIT-1515</p>
