Added the same header and footer format for school.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a href="misc/school.html">My School</a>
         </li>
         <li>
-          <a href="misc/courses.html">My courses</a>
+          <a href="misc/courses.html">My Mourses</a>
         </li>
       </ul>
      </nav>
