--- a/misc/school.html
+++ b/misc/school.html
@@ -2,12 +2,12 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8" >
-        <title>
-            My School
-        </title>
+        <title>My School</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+        <link href="css/stylesheet.css" rel="stylesheet" >
         <link href="../css/stylesheet.css" rel="stylesheet" >
-        
-
     </head>
     <body>
         <header>
@@ -15,10 +15,10 @@
               <h1 class="h1headingindex">Welcome to My First Website!</h1>
               <ul class="navlist">
                 <li>
-                  <a href="misc/school.html">My School</a>
+                  <a href="../index.html">Home</a>
                 </li>
                 <li>
-                  <a href="misc/courses.html">My courses</a>
+                  <a href="misc/courses.html">My Courses</a>
                 </li>
               </ul>
              </nav>
@@ -30,5 +30,6 @@
               width="150"
               height="150"
           ></a>
+        <footer>Copyright Data</footer>
     </body>
 </html>
