--- a/misc/school.html
+++ b/misc/school.html
@@ -12,13 +12,13 @@
     <body>
         <header>
             <nav>
-              <h1 class="h1headingindex">Welcome to My First Website!</h1>
+              <h1 class="h1headingindex">BCIT</h1>
               <ul class="navlist">
                 <li>
                   <a href="../index.html">Home</a>
                 </li>
                 <li>
-                  <a href="misc/courses.html">My Courses</a>
+                  <a href="courses.html">My Courses</a>
                 </li>
               </ul>
              </nav>
