--- a/misc/courses.html
+++ b/misc/courses.html
@@ -2,15 +2,30 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8" >
-        <title>
-            My Courses
-        </title>
+        <title>My Courses</title>
         <link href="../css/stylesheet.css" rel="stylesheet" >
-        
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+        <link href="css/stylesheet.css" rel="stylesheet" >
+        <link href="../css/stylesheet.css" rel="stylesheet" >
     </head>
     <body>
-       <main><p>3 Courses I am taking include:</p>
+      <header>
+        <nav>
+          <h1 class="h1headingindex">Courses</h1>
+          <ul class="navlist">
+            <li>
+              <a href="../index.html">Home</a>
+            </li>
+            <li>
+              <a href="courses.html">My School</a>
+            </li>
+          </ul>
+         </nav>
+       </header>
+       <article>
+        <p>3 Courses I am taking include:</p>
         <ul>
           <li>
             <a
@@ -23,6 +38,7 @@
           <li>ACIT-1515</li>
           <li>ACIT-1630</li>
         </ul>
-       </main>
+       </article>
+       <footer>Copyright Data</footer>
     </body>
 </html>
