Added a mobile layout for when under 600px

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </ul>
      </nav>
    </header>
-    <main>
+    <main class="indexmain">
       <aside>
         <img class="pfp"
           src="images/ngf1cprz2g851.webp"
