--- a/misc/courses.html
+++ b/misc/courses.html
@@ -2,6 +2,8 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8" >
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Courses</title>
         <link href="../css/stylesheet.css" rel="stylesheet" >
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,21 +26,31 @@
           </ul>
          </nav>
        </header>
-       <article>
-        <p>3 Courses I am taking include:</p>
-        <ul>
-          <li>
-            <a
+      <main>
+        <section class="coursesection">
+        <p class="coursep">
+          <a
               href="https://www.bcit.ca/outlines/20223048467/"
               target="_blank"
-              title="Fundamental Web Technologies Course Outline"
-              >ACIT-1620</a
-            >
-          </li>
-          <li>ACIT-1515</li>
-          <li>ACIT-1630</li>
-        </ul>
-       </article>
+              title="Fundamental Web Technologies Course Outline">ACIT 1620 - Fundamental Web Technologies</a>
+        </p>
+        <p class="coursep">Fall 2022</p>
+        <P class="coursep">This course introduces....</P>
+
+        </section>
+        <section class="coursesection">
+        <p class="coursep">ACIT-1515</p>
+        <p class="coursep">Fall 2022</p>
+        <p class="coursep">This course introduces....</p>
+
+        </section>
+        <section class="coursesection3">
+        <p class="coursep">ACIT-1630</p>
+        <p class="coursep">Fall 2022</p>
+        <P class="coursep">This course introduces....</P>
+        </section>
+      </main>
+
        <footer>Copyright Data</footer>
     </body>
 </html>
