--- a/misc/courses.html
+++ b/misc/courses.html
@@ -26,28 +26,28 @@
           </ul>
          </nav>
        </header>
-      <main>
+      <main class="coursemain">
         <section class="coursesection">
-        <p class="coursep">
+        <p class="coursep1">
           <a
               href="https://www.bcit.ca/outlines/20223048467/"
               target="_blank"
               title="Fundamental Web Technologies Course Outline">ACIT 1620 - Fundamental Web Technologies</a>
         </p>
-        <p class="coursep">Fall 2022</p>
-        <P class="coursep">This course introduces....</P>
+        <p class="coursep2">Fall 2022</p>
+        <P class="coursep3">This course introduces....</P>
 
         </section>
         <section class="coursesection">
-        <p class="coursep">ACIT-1515</p>
-        <p class="coursep">Fall 2022</p>
-        <p class="coursep">This course introduces....</p>
+        <p class="coursep1">ACIT-1515</p>
+        <p class="coursep2">Fall 2022</p>
+        <p class="coursep3">This course introduces....</p>
 
         </section>
-        <section class="coursesection3">
-        <p class="coursep">ACIT-1630</p>
-        <p class="coursep">Fall 2022</p>
-        <P class="coursep">This course introduces....</P>
+        <section class="coursesection2">
+        <p class="coursep1">ACIT-1630</p>
+        <p class="coursep2">Fall 2022</p>
+        <P class="coursep3">This course introduces....</P>
         </section>
       </main>
 
