added links to course outlines

--- a/misc/courses.html
+++ b/misc/courses.html
@@ -39,15 +39,39 @@
 
         </section>
         <section class="coursesection">
-        <p class="coursep1">ACIT-1515</p>
+        <p class="coursep1">
+          <a
+              href="https://www.bcit.ca/outlines/20223048461/"
+              target="_blank"
+              title="Scripting for IT Course Outline">ACIT 1515 - Scripting for IT</a>
+        </p>
         <p class="coursep2">Fall 2022</p>
-        <p class="coursep3">This course introduces....</p>
+        <p class="coursep3">The course introduces the fundamental concepts of programming for IT
+          professionals, with a focus on scripting languages that are commonly found in the workplace.
+           Projects, assignments, and activities are representative of tasks that IT professionals are
+            likely to encounter in the workplace. Students taking this course will design, implement, test,
+             and debug programs that incorporate: variables, expressions, assignments, I/O, conditional and
+              iterative control constructs, functions, and parameter passing. The course assumes no previous
+               programming experience.
+              </p>
 
         </section>
         <section class="coursesection2">
-        <p class="coursep1">ACIT-1630</p>
+        <p class="coursep1">
+          <a 
+            href="https://www.bcit.ca/outlines/20223048468/"
+            target="_blank"
+            title="Database Systems Course Outline">ACIT 1630 - Database Systems</a>
+        </p>
         <p class="coursep2">Fall 2022</p>
-        <P class="coursep3">This course introduces....</P>
+        <P class="coursep3">The course introduces the fundamental concepts of programming for IT
+           professionals, with a focus on scripting languages that are commonly found in the workplace.
+            Projects, assignments, and activities are representative of tasks that IT professionals are
+             likely to encounter in the workplace. Students taking this course will design, implement, test,
+              and debug programs that incorporate: variables, expressions, assignments, I/O, conditional and
+               iterative control constructs, functions, and parameter passing. The course assumes no previous
+                programming experience.
+        </p>
         </section>
       </main>
 
