--- a/misc/courses.html
+++ b/misc/courses.html
@@ -35,7 +35,12 @@
               title="Fundamental Web Technologies Course Outline">ACIT 1620 - Fundamental Web Technologies</a>
         </p>
         <p class="coursep2">Fall 2022</p>
-        <P class="coursep3">This course introduces....</P>
+        <p class="coursep3">This course introduces the fundamental principles, concepts, and techniques for understanding
+           and developing modern web sites. Topics include: underlying infrastructure and technologies that make the web
+            works; building the structure of webpages with HTML; styling text and content with CSS; dynamically updating
+             the content and style of pages with client-side scripting techniques. This course is intended as the foundation
+              for more advanced web courses.
+          </p>
 
         </section>
         <section class="coursesection">
@@ -53,7 +58,7 @@
              and debug programs that incorporate: variables, expressions, assignments, I/O, conditional and
               iterative control constructs, functions, and parameter passing. The course assumes no previous
                programming experience.
-              </p>
+          </p>
 
         </section>
         <section class="coursesection2">
@@ -64,14 +69,11 @@
             title="Database Systems Course Outline">ACIT 1630 - Database Systems</a>
         </p>
         <p class="coursep2">Fall 2022</p>
-        <P class="coursep3">The course introduces the fundamental concepts of programming for IT
-           professionals, with a focus on scripting languages that are commonly found in the workplace.
-            Projects, assignments, and activities are representative of tasks that IT professionals are
-             likely to encounter in the workplace. Students taking this course will design, implement, test,
-              and debug programs that incorporate: variables, expressions, assignments, I/O, conditional and
-               iterative control constructs, functions, and parameter passing. The course assumes no previous
-                programming experience.
-        </p>
+        <P class="coursep3">This course covers relational and NoSQL database technologies,
+           including basic concepts, relational algebra, enhanced entity-relationship and
+            NoSQL data modeling, functional dependencies and normalization, design methodology,
+             SQL query language (DDL and DML), views, security and transaction management.
+          </p>
         </section>
       </main>
 
