applied changes of courses.html to lab6 branch because was in main branch instead of lab6 branch....

--- a/misc/courses.html
+++ b/misc/courses.html
@@ -2,6 +2,8 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8" >
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Courses</title>
         <link href="../css/stylesheet.css" rel="stylesheet" >
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,21 +26,57 @@
           </ul>
          </nav>
        </header>
-       <article>
-        <p>3 Courses I am taking include:</p>
-        <ul>
-          <li>
-            <a
+      <main class="coursemain">
+        <section class="coursesection">
+        <p class="coursep1">
+          <a
               href="https://www.bcit.ca/outlines/20223048467/"
               target="_blank"
-              title="Fundamental Web Technologies Course Outline"
-              >ACIT-1620</a
-            >
-          </li>
-          <li>ACIT-1515</li>
-          <li>ACIT-1630</li>
-        </ul>
-       </article>
+              title="Fundamental Web Technologies Course Outline">ACIT 1620 - Fundamental Web Technologies</a>
+        </p>
+        <p class="coursep2">Fall 2022</p>
+        <p class="coursep3">This course introduces the fundamental principles, concepts, and techniques for understanding
+           and developing modern web sites. Topics include: underlying infrastructure and technologies that make the web
+            works; building the structure of webpages with HTML; styling text and content with CSS; dynamically updating
+             the content and style of pages with client-side scripting techniques. This course is intended as the foundation
+              for more advanced web courses.
+          </p>
+
+        </section>
+        <section class="coursesection">
+        <p class="coursep1">
+          <a
+              href="https://www.bcit.ca/outlines/20223048461/"
+              target="_blank"
+              title="Scripting for IT Course Outline">ACIT 1515 - Scripting for IT</a>
+        </p>
+        <p class="coursep2">Fall 2022</p>
+        <p class="coursep3">The course introduces the fundamental concepts of programming for IT
+          professionals, with a focus on scripting languages that are commonly found in the workplace.
+           Projects, assignments, and activities are representative of tasks that IT professionals are
+            likely to encounter in the workplace. Students taking this course will design, implement, test,
+             and debug programs that incorporate: variables, expressions, assignments, I/O, conditional and
+              iterative control constructs, functions, and parameter passing. The course assumes no previous
+               programming experience.
+          </p>
+
+        </section>
+        <section class="coursesection2">
+        <p class="coursep1">
+          <a 
+            href="https://www.bcit.ca/outlines/20223048468/"
+            target="_blank"
+            title="Database Systems Course Outline">ACIT 1630 - Database Systems</a>
+        </p>
+        <p class="coursep2">Fall 2022</p>
+        <P class="coursep3">This course covers relational and NoSQL database technologies,
+           including basic concepts, relational algebra, enhanced entity-relationship and
+            NoSQL data modeling, functional dependencies and normalization, design methodology,
+             SQL query language (DDL and DML), views, security and transaction management.
+          </p>
+        </section>
+      </main>
+
        <footer>Copyright Data</footer>
     </body>
 </html>
