added a line in courses.html to load and run my script.js

--- a/misc/courses.html
+++ b/misc/courses.html
@@ -13,6 +13,7 @@
         <link href="../css/stylesheet.css" rel="stylesheet" >
     </head>
     <body>
+      <script defer src="../scripts/script.js"></script>
       <header>
         <nav>
           <h1 class="h1headingindex">Courses</h1>
